namespace Enemies
{
    public enum EnemyType
    {
        chmonya,
        putler,
        bigShip
    }
}